fix goal invisible 2

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -91,7 +91,7 @@
       position: absolute;
       top: 20px;
       left:10px;
-      z-index: 3;
+      z-index: 20;
       background-color: #2563eb;
       color: white;
       padding: 8px 14px; 
@@ -150,7 +150,7 @@
       border-radius: 20px;
       cursor: pointer;
       box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-      z-index: 3;
+      z-index: 10;
     }
     #goalModal {
       position: absolute;
